# NMSplit90

./: .gitignore  README.md
get_mode/: QL6.f90  README.md  TODO  check_norm.f90  coupling.h  decipher_cluster.f90  find_disc.f90  fort.12  forward_new.f90  futil.f90  get_cmt.f90  in_modes  kernel.f90  kernel.txt  makefile  mode.data  model.h  test_modes
specfem_mesh/: Makefile  Makefile.am  TODO  all  cleanup.sh  configure.ac  self_coupling_modes  vani_kernel.cuf
specfem_mesh/cuda/: compile.sh  compute_ani_splitting.f90
specfem_mesh/figures/benchmark/: plot_constant.py
specfem_mesh/figures/benchmark/data/constant_ACLNF/: radial_6S4.txt  sem_6S4.txt
specfem_mesh/plot_modes/: compile.sh  extract_mode.f90  plot_mode.py
specfem_mesh/src/: T_matrix.f90  V_ani_matrix.f90  V_iso_matrix.f90  W_matrix.f90  allocation.f90  break_mesh.f90  centrifugal.f90  compute_ani_splitting.f90  compute_splitting_effect.f90  constants.h  cst.f90  cuda_proxies.f90  elastic_tensor.f90  get_mode.f90  gll.f90  gravity.f90  integrate.f90  integrate_mesh.f90  kdtree.f90  lagrange_any.f90  linearly_breakup_mesh.f90  math.f90  mesh.f90  mesh_utils.f90  mineos_model.f90  mode.f90  model3D_reader.f90  optimised_vani.f90  output.f90  params.f90  params.in  piecewise_interpolation.f90  plot_vani_matrix_to_ensight.f90  precision.h  projection.f90  read_mesh.f90  spline.f90  split_mesh.f90  thrj.f90  vani_kernel.cuf  (+6 more)
specfem_mesh/tests/: Makefile.am  README.md  configure.ac  run_integration.sh  run_mode_norm.sh  run_plm.sh  run_rotmat.sh  run_spline.sh  run_tests.sh  run_tmat.sh  run_vani.sh  run_xlm.sh  run_ylm.sh  test_plm.f90  test_plm.py  test_plm.sh  test_ylm  test_ylm.py  test_ylm.sh  testylm.txt
specfem_mesh/tests/Tmat/: rho_st.f90  tmat_radial.f90  tmat_sem.f90
specfem_mesh/tests/Tmat/rho_st_profiles/: plot_profiles.py
specfem_mesh/tests/Vani/: cleanup.sh  plot_splitting.py  test_fast_Vani.f90  test_vani.py  tromp_1995.f90
specfem_mesh/tests/Vani/Tromp_1993_model/: compile.sh  radial_method.f90  radial_method.sh
specfem_mesh/tests/Vani/Tromp_1993_model/9S3/: poly_all.csv  poly_rot.csv
specfem_mesh/tests/Vani/Tromp_1993_model/abg/: alpha.csv
specfem_mesh/tests/Viso/: viso_radial.f90  viso_sem.f90
specfem_mesh/tests/Viso/grav_st_profiles/: plot_dPhidr.py
specfem_mesh/tests/bond_matrix/: bond_matrix.f90  cleanup.sh  compile.sh
specfem_mesh/tests/cst/: test_cst_to_mat.f90
specfem_mesh/tests/gravity/: plot_gmag.py  test_gmag.f90
specfem_mesh/tests/integration/: cleanup.sh  original_params.f90  test_1_integration.f90  test_1_integration.sh  test_integration.py  test_ylm_integration.f90  test_ylm_integration.sh
specfem_mesh/tests/mesh_resolution/: speed_resolution.py
specfem_mesh/tests/mode_normalisation/: cleanup.sh  test_mode_normalisation.f90  test_norm.py  test_norm.sh
specfem_mesh/tests/plm/: cleanup.sh  test_plm.f90  test_plm.py  test_plm.sh  test_plm_values.f90
specfem_mesh/tests/rot_mat/: cleanup.sh  rotation_semi_analytical.f90  test_rotation_matrix.f90  test_rotation_matrix.py  test_semi_whole.f90  test_stored_Wmat.f90
specfem_mesh/tests/rotation_matrix/: cleanup.sh  rotation_semi_analytical.f90  semi_analytical.sh  test_fast_Wmat.sh  test_rotation.sh  test_rotation_matrix.f90  test_rotation_matrix.py  test_stored_Wmat.f90
specfem_mesh/tests/rtp_to_xyz/: test_rtp_xyz.f90  test_rtp_xyz.sh
specfem_mesh/tests/spline/: cleanup.sh  spline.py  test_spline.f90  test_spline.py  test_spline.sh
specfem_mesh/tests/strain/: compile.sh
specfem_mesh/tests/v_ani_matrix/: compile.sh  fast.sh  plot_splitting.py  radial.sh  test_Vani.f90  test_fast_Vani.f90  test_vani.py  test_vani.sh  test_wj3.f90  test_wj3.py  tromp_1995.f90  wj3.sh
specfem_mesh/tests/v_ani_matrix/Tromp_1993_model/: Tromp_93_sem.f90  gamma.csv  radial_method.f90  radial_method.sh
specfem_mesh/tests/v_ani_matrix/Tromp_1993_model/abg/: beta.csv
specfem_mesh/tests/wj3/: test_wj3.f90  test_wj3.py  wj3.sh
specfem_mesh/tests/xlm/: cleanup.sh  test_xlm.f90  test_xlm.py  test_xlm.sh
specfem_mesh/tests/ylm/: cleanup.sh  test_values.f90  test_ylm.f90  test_ylm.py  test_ylm.sh
src/get_mode/: get_mode.f90  intgrl_disc.f90  makefile  modes.h  plot_mode.py  test_modes.f90
